# tfschema-bindgen

./: .gitignore  Cargo.toml  README.md  README.tpl
.circleci/: config.yml
examples/: quickstart.rs
src/: binding.rs  config.rs  emit.rs  generate.rs  lib.rs  test_utils.rs
tests/fixtures/: block_type_test.json  datasource_test.json
